# sgh-backend

./: .env.example  .gitignore  README.md  base_prompt.txt  gemini.py  groq.py  main.py  pyproject.toml  refine_data.py  requirements.txt  scrapy.cfg  sites.csv  temp.py
admission_scraper/: pipelines.py  settings.py  utils.py
admission_scraper/spiders/: add.py  fix_url.py  pages.py  uni.py
admission_scraper/utils/: page.py  pdf.py
data/: central_universities.csv  iits.csv  refine_data.py  state_universities.csv
db/: data.py  models.py  seed.py  session.py  setup.py  utils.py
llm/: gemini.py  groq-llm.py  process.py  utils.py
seed_data/: programs.json  states.json  tags.json
